--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-535.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-518.5KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇮🇹 意大利-524.4KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-1000.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-515.7KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-897.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-877.0KB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
-  - {name: 🇺🇸 美国-455.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-218.4KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-997.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-906.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-566.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-447.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-516.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-518.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-524.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-515.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
