--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-218.4KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-997.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-906.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-566.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-447.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-516.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇫🇷 法国-728.8KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇫🇷 法国-934.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-614.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-691.3KB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-416.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-688.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-308.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-438.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-687.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-218.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-906.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-728.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-416.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-688.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
