--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-291.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-774.2KB/s(Youtube:不良林), server: 38.68.134.191, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-1.42MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-165.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇮🇹 意大利-342.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇺🇸 美国-723.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.38MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇫🇷 法国-692.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-372.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-291.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-774.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-692.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
