--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-294.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-517.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇸🇬 新加坡-974.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇯🇵 日本-2.38MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-800.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.79MB/s(Youtube:不良林), server: 103.147.126.127, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.147.126.127}}
+  - {name: 🇺🇸 美国-470.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-464.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 未知国家-5.05MB/s(Youtube:不良林), server: 103.186.148.113, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.113}}
   - {name: 🇨🇦 加拿大-468.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
   - {name: 🇸🇬 新加坡-4.28MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-800.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
       - 未知国家-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
